--- a/src/main/resources/application-test-sample.yml
+++ b/src/main/resources/application-test-sample.yml
@@ -1,7 +1,7 @@
 # src/main/resources/application-test.yml
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:library_test}
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USERNAME:your_default_username}
     password: ${DB_PASSWORD:your_default_password}
     driver-class-name: org.postgresql.Driver
